# ExfilGate

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  main.py  opencode.json  pyproject.toml
.github/workflows/: tests.yml
app/: main.py
app/api/: errors.py  routes.py
app/audit/: base.py  jsonl.py  models.py
app/config/: policy_loader.py  settings.py
app/detectors/: base.py  gitleaks.py  regex_pii.py  regex_secret.py
app/policy/: engine.py  models.py
app/providers/: base.py  headroom.py  openai_compatible.py
app/scanning/: service.py  targets.py
examples/: chat_completion_request.json  config.deepseek.yaml  config.gitleaks-enabled.yaml  config.headroom-deepseek.yaml  config.headroom.yaml  config.lmstudio.yaml  config.yaml
tests/integration/: test_api.py
tests/support/: mock_provider.py
tests/unit/: test_audit.py  test_config.py  test_detectors.py  test_policy.py  test_regex_secret.py  test_runtime.py  test_scanning.py
